--- a/src/assets/scss/subspace-relayer/custom/utilities/_text.scss
+++ b/src/assets/scss/subspace-relayer/custom/utilities/_text.scss
@@ -19,6 +19,7 @@
 
 .text-xs { font-size: $font-size-xs !important; }
 .text-sm { font-size: $font-size-sm !important; }
+.text-md { font-size: $font-size-md !important; }
 .text-lg { font-size: $font-size-lg !important; }
 .text-xl { font-size: $font-size-xl !important; }
 
