--- a/frontend/src/assets/scss/subspace-relayer.scss
+++ b/frontend/src/assets/scss/subspace-relayer.scss
@@ -15,6 +15,7 @@
 @import "~bootstrap/scss/card";
 @import "~bootstrap/scss/badge";
 @import "~bootstrap/scss/media";
+@import "~bootstrap/scss/spinners";
 @import "~bootstrap/scss/tooltip";
 @import "~bootstrap/scss/utilities";
 
